<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pdfreader"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_stat"
            android:title="@string/menu_stat" />
        <item
            android:id="@+id/nav_user_abouts"
            android:title="@string/menu_abouts" />
        <item
            android:id="@+id/nav_games"
            android:title="@string/menu_games" />

        <item
            android:id="@+id/nav_reset"
            android:title="@string/logout" />
    </group>
</menu>
