<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.psulccomsci.civilservicereviewer.ui.home.Home"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_pdfreader"
        android:name="com.psulccomsci.civilservicereviewer.ui.pdfreader.PDFFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/books_fragment" />

    <fragment
        android:id="@+id/nav_stat"
        android:name="com.psulccomsci.civilservicereviewer.ui.statistics.StatisticsFragment"
        android:label="@string/stat"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_user_abouts"
        android:name="com.psulccomsci.civilservicereviewer.ui.abouts.Abouts"
        android:label="@string/menu_abouts"
        tools:layout="@layout/abouts_fragment" />

    <fragment
        android:id="@+id/nav_games"
        android:name="com.psulccomsci.civilservicereviewer.ui.games.Games"
        android:label="@string/menu_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/nav_reset"
        android:name="com.psulccomsci.civilservicereviewer.ui.logout.Logout"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
</navigation>