<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quest"
        android:layout_width="0dp"
        android:layout_height="111dp"
        android:background="@color/transparent"
        android:fontFamily="sans-serif-black"
        android:outlineProvider="background"
        android:scrollbarSize="@dimen/fab_icon_size"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:text="@string/Questions"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold"
        android:verticalScrollbarPosition="right"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="342dp"
        android:layout_height="257dp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quest"
        app:layout_constraintVertical_bias="0.084"
        android:background="@color/transparent">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:elevation="4dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:elevation="5dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff"
            />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:elevation="6dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:elevation="7dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:elevation="8dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff"/>
    </RadioGroup>

    <Button
        android:id="@+id/exit"
        android:layout_width="232dp"
        android:layout_height="77dp"
        android:background="@color/transparent"
        android:text="@string/exit"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/next"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="75dp"
        android:layout_height="67dp"
        android:layout_marginBottom="100dp"
        android:background="@android:drawable/ic_media_play"
        android:text="@string/next"
        android:textColor="#001072"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="#00740000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        />

    <TextView
        android:id="@+id/item2"
        android:layout_width="67dp"
        android:layout_height="47dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="46dp"
        android:autoText="false"
        android:background="@android:drawable/presence_online"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/quest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>